# ct-project-mat-2021

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  skeletonization.cpp  skeletonization.h
